# GeoGuessrDesktop

./: NOTES.md  README.md  dependencies.json  index.html  package.json  scripts.json
.claude/: settings.local.json
.github/workflows/: release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
