[package]
name = "geoguessrdesktop"
version = "0.9.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "geoguessrdesktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.10"
chrono = "0.4"
base64 = "0.21"
open = "5"
tokio = { version = "1", features = ["time", "rt-multi-thread"] }
discord-rich-presence = "1.0.0"

